--- a/admin/index.html
+++ b/admin/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/w3.css">
+    <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="shortcut icon" href="assets/img/ico.png" type="image/x-icon">
 </head>
 
@@ -52,15 +53,17 @@
 
     <div class="maintables">
         <div class="titleTable">Controle de Personagens</div>
+        <div class="lineCRUD">
+            <button id="myBtn" style="position: unset;" class="btn btn-secondary">Novo+</button>
+        </div>
         <table class="table">
             <thead>
-                <tr class="header">
+                <tr class="tab-header">
                     <td>Nome</td>
                     <td>Tipo</td>
                     <td>HP</td>
                     <td>CA</td>
                     <td>Iniciativa</td>
-                    <td></td>
                     <td></td>
                 </tr>
                 <tr class="lineCRUD">
@@ -70,35 +73,6 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td></td>
-                </tr>
-                <tr class="inputsCRUD">
-                    <td>
-                        <input type="text" id="nameCRUD" class="form-control form-control-sm">
-                    </td>
-                    <td>
-                        <select id="typeCRUD" class="custom-select custom-select-sm mb-3">
-                                <option value="0">Tipo</option>
-                                <option value="1">Npc</option>
-                                <option value="2">Monstro</option>
-                                <option value="3">Jogador</option>
-                            </select>
-                    </td>
-                    <td>
-                        <input type="text" class="form-control form-control-sm" id="hpCRUD">
-                    </td>
-                    <td>
-                        <input type="text" id="caCRUD" class="form-control form-control-sm">
-                    </td>
-                    <td>
-                        <input type="text" class="form-control form-control-sm" id="iniCRUD">
-                    </td>
-                    <td>
-                        <button type="button" id="btn-submit" class="btn-submit-reset">
-                                <img src="assets/img/confirm.png" class="imgConfirm" alt="Confirmar">
-                            </button>
-                    </td>
-                    <td></td>
                 </tr>
             </thead>
             <tbody>
@@ -107,7 +81,16 @@
         </table>
     </div>
 
+    <div id="myModal" class="myModal">
+        <div class="modalcontent">
+            <span class="modalClose">&times;</span>
+            <p>Some text in the Modal..</p>
+        </div>
+
+    </div>
+
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/modal.js"></script>
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
