correções no css

--- a/admin/euphoria.html
+++ b/admin/euphoria.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="index.html">Home Page</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Euphoria</a>
+                    <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#">Euphoria</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="euphoria.html">Euphoria</a>
                         <a class="dropdown-item" href="locales/shurima.html">Império de Shurima</a>
@@ -36,9 +36,9 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Estatisticas</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="../statistics/ambience.html">Monstros por Ambiente</a>
-                        <a class="dropdown-item" href="../statistics/level.html">Tabelas de Experiência</a>
-                        <a class="dropdown-item" href="../statistics/skill.html">Tabelas de Modificadores</a>
+                        <a class="dropdown-item" href="statistics/ambience.html">Monstros por Ambiente</a>
+                        <a class="dropdown-item" href="statistics/level.html">Tabelas de Experiência</a>
+                        <a class="dropdown-item" href="statistics/skill.html">Tabelas de Modificadores</a>
                     </div>
                 </li>
                 <li class="nav-item">
