--- a/admin/spells.html
+++ b/admin/spells.html
@@ -37,17 +37,15 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Estatisticas</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="statistics/ambience.html">Monstros por Ambiente</a>
-                        <a class="dropdown-item" href="statistics/level.html">Nivel por XP</a>
-                        <a class="dropdown-item" href="statistics/aventure.html">XP por dia de Aventura</a>
-                        <a class="dropdown-item" href="statistics/skill.html">Modificador por Valor de Habilidade</a>
-                        <a class="dropdown-item" href="statistics/difficulty.html">Dificuldade por XP</a>
+                        <a class="dropdown-item" href="statistics/level.html">Tabelas de Experiência</a>
+                        <a class="dropdown-item" href="statistics/skill.html">Tabelas de Modificadores</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="monsters.html">Monstros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="spells.html">Magias</a>
+                    <a class="nav-link active" href="spells.html">Magias</a>
                 </li>
             </ul>
         </div>
