--- a/admin/index.html
+++ b/admin/index.html
@@ -20,32 +20,32 @@
         <div class="menu">
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home Page</a>
+                    <a class="nav-link active" href="index.html" target="_blank">Home Page</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Euphoria</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="euphoria.html">Euphoria</a>
-                        <a class="dropdown-item" href="locales/shurima.html">Império de Shurima</a>
-                        <a class="dropdown-item" href="locales/avalon.html">Reino de Avalon</a>
-                        <a class="dropdown-item" href="locales/maia.html">Império Maia</a>
-                        <a class="dropdown-item" href="locales/roman.html">Império Romano</a>
-                        <a class="dropdown-item" href="locales/whales.html">Arquipélago Whales</a>
+                        <a class="dropdown-item" href="euphoria.html" target="_blank">Euphoria</a>
+                        <a class="dropdown-item" href="locales/shurima.html" target="_blank">Império de Shurima</a>
+                        <a class="dropdown-item" href="locales/avalon.html" target="_blank">Reino de Avalon</a>
+                        <a class="dropdown-item" href="locales/maia.html" target="_blank">Império Maia</a>
+                        <a class="dropdown-item" href="locales/roman.html" target="_blank">Império Romano</a>
+                        <a class="dropdown-item" href="locales/whales.html" target="_blank">Arquipélago Whales</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Estatisticas</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="../statistics/ambience.html">Monstros por Ambiente</a>
-                        <a class="dropdown-item" href="../statistics/level.html">Tabelas de Experiência</a>
-                        <a class="dropdown-item" href="../statistics/skill.html">Tabelas de Modificadores</a>
+                        <a class="dropdown-item" href="statistics/ambience.html" target="_blank">Monstros por Ambiente</a>
+                        <a class="dropdown-item" href="statistics/level.html" target="_blank">Tabelas de Experiência</a>
+                        <a class="dropdown-item" href="statistics/skill.html" target="_blank">Tabelas de Modificadores</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="monsters.html">Monstros</a>
+                    <a class="nav-link" href="monsters.html" target="_blank">Monstros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="spells.html">Magias</a>
+                    <a class="nav-link" href="spells.html" target="_blank">Magias</a>
                 </li>
             </ul>
         </div>
@@ -53,8 +53,11 @@
 
     <div class="maintables">
         <div class="titleTable">Controle de Personagens</div>
-        <div class="lineCRUD">
+        <div class="btn-new">
+            <br>
             <button id="myBtn" style="position: unset;" class="btn btn-secondary">Novo+</button>
+            <br>
+            <br>
         </div>
         <table class="table">
             <thead>
