--- a/admin/locales/shurima.html
+++ b/admin/locales/shurima.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="../index.html">Home Page</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Euphoria</a>
+                    <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#">Euphoria</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="../euphoria.html">Euphoria</a>
                         <a class="dropdown-item" href="../locales/shurima.html">Império de Shurima</a>
