--- a/admin/statistics/ambience.html
+++ b/admin/statistics/ambience.html
@@ -34,7 +34,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Estatisticas</a>
+                    <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#">Estatisticas</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="../statistics/ambience.html">Monstros por Ambiente</a>
                         <a class="dropdown-item" href="../statistics/level.html">Tableas de Experiência</a>
