--- a/admin/index.html
+++ b/admin/index.html
@@ -47,6 +47,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="spells.html" target="_blank">Magias</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="traps.html">Armadilhas</a>
+                </li>
             </ul>
         </div>
     </div>
