--- a/admin/statistics/ambience.html
+++ b/admin/statistics/ambience.html
@@ -47,6 +47,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../spells.html">Magias</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="../traps.html">Armadilhas</a>
+                </li>
             </ul>
         </div>
     </div>
