--- a/admin/index.html
+++ b/admin/index.html
@@ -41,6 +41,14 @@
                         <a class="dropdown-item" href="statistics/skill.html" target="_blank">Tabelas de Modificadores</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Tesouros</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="treasure/gems.html">Gemas</a>
+                        <a class="dropdown-item" href="treasure/value.html">Objetos de Valor</a>
+                        <a class="dropdown-item" href="treasure/items.html">Itens Mágicos</a>
+                    </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="monsters.html" target="_blank">Monstros</a>
                 </li>
@@ -48,7 +56,7 @@
                     <a class="nav-link" href="spells.html" target="_blank">Magias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="traps.html">Armadilhas</a>
+                    <a class="nav-link" href="traps.html">Armadilhas</a>
                 </li>
             </ul>
         </div>
