--- a/admin/statistics/level.html
+++ b/admin/statistics/level.html
@@ -42,6 +42,14 @@
                         <a class="dropdown-item" href="../statistics/skill.html">Tabelas de Modificadores</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Tesouros</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="../treasure/gems.html">Gemas</a>
+                        <a class="dropdown-item" href="../treasure/value.html">Objetos de Valor</a>
+                        <a class="dropdown-item" href="../treasure/items.html">Itens Mágicos</a>
+                    </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../monsters.html">Monstros</a>
                 </li>
@@ -49,7 +57,7 @@
                     <a class="nav-link" href="../spells.html">Magias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="../traps.html">Armadilhas</a>
+                    <a class="nav-link" href="../traps.html">Armadilhas</a>
                 </li>
             </ul>
         </div>
