--- a/admin/traps.html
+++ b/admin/traps.html
@@ -68,8 +68,8 @@
             <table>
                 <thead>
                     <tr>
-                        <td class="name">Nível</td>
-                        <td class="value">Xp por Dia</td>
+                        <td class="name">Nome</td>
+                        <td class="value">Descrição</td>
                     </tr>
                 </thead>
                 <tbody>
