--- a/admin/treasure/items.html
+++ b/admin/treasure/items.html
@@ -63,13 +63,15 @@
     </div>
     <!-- Main Body-->
     <div class="content-center">
-        <p>Tabelas de Modificadores:</p>
+        <p>Tabelas de Itens:</p>
         <div class="choice">
             <select id="choice" class="custom-select custom-select-sm">
-            <option value="0">Tipo de Tabela</option>
-            <option value="1">Modificador por ND</option>
-            <option value="2">Modificador por Valor de Habilidade</option>
-            <option value="3">Modificador por Nivel</option>
+            <option value="0">Tipo de Item por Raridade</option>
+            <option value="1">Comum</option>
+            <option value="2">incomum</option>
+            <option value="3">Raro</option>
+            <option value="4">Muito Raro</option>
+            <option value="5">Lendário</option>
         </select>
             <button type="button" id="btn-submit" class="btn btn-secondary">Enviar</button>
         </div>
