--- a/admin/treasure/value.html
+++ b/admin/treasure/value.html
@@ -55,13 +55,15 @@
     </div>
     <!-- Main Body-->
     <div class="content-center">
-        <p>Tabelas de Modificadores:</p>
+        <p>Tabelas de Obejto de Valor:</p>
         <div class="choice">
             <select id="choice" class="custom-select custom-select-sm">
-            <option value="0">Tipo de Tabela</option>
-            <option value="1">Modificador por ND</option>
-            <option value="2">Modificador por Valor de Habilidade</option>
-            <option value="3">Modificador por Nivel</option>
+            <option value="0">Tipo de Objeto por Valor</option>
+            <option value="1">Objeto de Arte de 25 Po</option>
+            <option value="2">Objeto de Arte de 250 Po</option>
+            <option value="3">Objeto de Arte de 750 Po</option>
+            <option value="4">Objeto de Arte de 2500 Po</option>
+            <option value="5">Objeto de Arte de 7500 Po</option>
         </select>
             <button type="button" id="btn-submit" class="btn btn-secondary">Enviar</button>
         </div>
