--- a/admin/treasure/gems.html
+++ b/admin/treasure/gems.html
@@ -63,19 +63,82 @@
     </div>
     <!-- Main Body-->
     <div class="content-center">
-        <p>Tabelas de Modificadores:</p>
+        <p>Gemas de Valor:</p>
         <div class="choice">
             <select id="choice" class="custom-select custom-select-sm">
-            <option value="0">Tipo de Tabela</option>
-            <option value="1">Modificador por ND</option>
-            <option value="2">Modificador por Valor de Habilidade</option>
-            <option value="3">Modificador por Nivel</option>
+            <option value="0">Tipo de Gema</option>
+            <option value="1">Gemas de 10 Po</option>
+            <option value="2">Gemas de 50 Po</option>
+            <option value="3">Gemas de 100 Po</option>
+            <option value="4">Gemas de 500 Po</option>
+            <option value="5">Gemas de 1000 Po</option>
+            <option value="6">Gemas de 5000 Po</option>
         </select>
             <button type="button" id="btn-submit" class="btn btn-secondary">Enviar</button>
         </div>
     </div>
     <div id="tab">
-
+        <div class="card" id="card">
+            <div class="card-title">Modificador por Valor de Habilidade</div>
+            <table>
+                <thead>
+                    <tr>
+                        <td class="name">Nome</td>
+                        <td class="value">Descrição</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="name">Azurita</td>
+                        <td class="value">azul escuro mosqueado opaco</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Ágata malhada</td>
+                        <td class="value">marrom, azul, branca ou vermelho translúcido e listrado</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Quartzo azul</td>
+                        <td class="value">azul claro transparente</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Ágata ocular</td>
+                        <td class="value">círculos translúcidos de cinza, branco, marro, azul ou verde</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Hematita</td>
+                        <td class="value">cinza escuro opaco</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Lápis lazúli</td>
+                        <td class="value">azul claro e escuro opaco com manchas amarelas</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Malaquita</td>
+                        <td class="value">opaco estriado com verde claro e escuro</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Ágata musgo</td>
+                        <td class="value">rosa translúcido ou amarelo claro com cinza musgo ou marcas verdes</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Obsidiana</td>
+                        <td class="value">preto opaco</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Rodocrosita</td>
+                        <td class="value">azul claro opaco</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Olho de tigre</td>
+                        <td class="value">marrom translúcido com centro dourado</td>
+                    </tr>
+                    <tr>
+                        <td class="name">Turquesa</td>
+                        <td class="value">azul esverdeado claro opaco</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <!-- Script Section-->
     <script src="../assets/js/gems.js"></script>
