--- a/admin/treasure/items.html
+++ b/admin/treasure/items.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tabelas de Modificadores</title>
+    <title>Itens Mágicos</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/bootstrap.css">
     <link rel="stylesheet" href="../assets/css/w3.css">
@@ -77,7 +77,67 @@
         </div>
     </div>
     <div id="tab">
-
+        <div class="card" id="card">
+            <div class="card-title">Itens Mágicos Comuns</div>
+            <table>
+                <thead>
+                    <tr>
+                        <td class="name">Nome</td>
+                        <td class="value">Descrição</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                    <tr>
+                        <td class="name"></td>
+                        <td class="value"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <!-- Script Section-->
     <script src="../assets/js/items.js"></script>
