--- a/admin/treasure/value.html
+++ b/admin/treasure/value.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tabelas de Modificadores</title>
+    <title>Objetos de Arte</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/bootstrap.css">
     <link rel="stylesheet" href="../assets/css/w3.css">
@@ -34,11 +34,19 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#">Estatisticas</a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Estatisticas</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="../statistics/ambience.html">Monstros por Ambiente</a>
                         <a class="dropdown-item" href="../statistics/level.html">Tabelas de Experiência</a>
                         <a class="dropdown-item" href="../statistics/skill.html">Tabelas de Modificadores</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#">Tesouros</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="../treasure/gems.html">Gemas</a>
+                        <a class="dropdown-item" href="../treasure/value.html">Objetos de Valor</a>
+                        <a class="dropdown-item" href="../treasure/items.html">Itens Mágicos</a>
                     </div>
                 </li>
                 <li class="nav-item">
