--- a/admin/traps.html
+++ b/admin/traps.html
@@ -63,7 +63,7 @@
     <!-- Main Body-->
     <div id="tab">
         <div class="card" id="card" style="background-color: #cccccc;border: 5px solid rgba(0, 0, 0, 1);border-radius: 0;">
-            <div class="card-title">Experiência por dia</div>
+            <div class="card-title" style="font-size: 20px;">Armadilhas</div>
             <table>
                 <thead>
                     <tr>
