--- a/admin/statistics/ambience.html
+++ b/admin/statistics/ambience.html
@@ -37,8 +37,8 @@
                     <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#">Estatisticas</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="../statistics/ambience.html">Monstros por Ambiente</a>
-                        <a class="dropdown-item" href="../statistics/level.html">Tableas de Experiência</a>
-                        <a class="dropdown-item" href="../statistics/skill.html">Modificador por Valor de Habilidade</a>
+                        <a class="dropdown-item" href="../statistics/level.html">Tabelas de Experiência</a>
+                        <a class="dropdown-item" href="../statistics/skill.html">Tabelas de Modificadores</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
