--- a/admin/downloads.html
+++ b/admin/downloads.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Magias</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/spells.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/w3.css">
+    <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="shortcut icon" href="assets/img/ico.png" type="image/x-icon">
 </head>
 
 <body class="body" background="assets/img/back.jpg" style="background-attachment: fixed;">
 
-    <!-- Nav Bar-->
     <div class="header">
         <div class="menu">
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home Page</a>
+                    <a class="nav-link active" href="index.html">Home Page</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Estatisticas</a>
@@ -41,39 +41,22 @@
                     <a class="nav-link" href="monsters.html">Monstros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="spells.html">Magias</a>
+                    <a class="nav-link" href="spells.html">Magias</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="traps.html">Armadilhas</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="downloads.html">Downloads</a>
+                </li>
             </ul>
         </div>
     </div>
-    <!-- Main Body-->
-    <div class="content-center">
-        <p>Nivel da Magia:</p>
-        <div class="choice">
-            <select id="choice" class="custom-select custom-select-sm">
-            <option selected value="10">Escolha uma opção</option>
-            <option value="0">Truque</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-        </select>
-            <button type="button" id="btn-submit" class="btn btn-secondary">Enviar</button>
-        </div>
-    </div>
-    <div id="img">
 
-    </div>
-    <!-- Script Section-->
-    <script src="assets/js/spellsImg.js"></script>
+
+
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/modal.js"></script>
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
