--- a/admin/index.html
+++ b/admin/index.html
@@ -23,17 +23,6 @@
                     <a class="nav-link active" href="index.html" target="_blank">Home Page</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Euphoria</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="euphoria.html" target="_blank">Euphoria</a>
-                        <a class="dropdown-item" href="locales/shurima.html" target="_blank">Império de Shurima</a>
-                        <a class="dropdown-item" href="locales/avalon.html" target="_blank">Reino de Avalon</a>
-                        <a class="dropdown-item" href="locales/maia.html" target="_blank">Império Maia</a>
-                        <a class="dropdown-item" href="locales/roman.html" target="_blank">Império Romano</a>
-                        <a class="dropdown-item" href="locales/whales.html" target="_blank">Arquipélago Whales</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Estatisticas</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="statistics/ambience.html" target="_blank">Monstros por Ambiente</a>
@@ -55,7 +44,10 @@
                     <a class="nav-link" href="spells.html" target="_blank">Magias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="traps.html">Armadilhas</a>
+                    <a class="nav-link" href="traps.html" target="_blank">Armadilhas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="downloads.html" target="_blank">Downloads</a>
                 </li>
             </ul>
         </div>
