--- a/admin/downloads.html
+++ b/admin/downloads.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home Page</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/download.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/w3.css">
     <link rel="stylesheet" href="assets/css/modal.css">
@@ -20,7 +20,7 @@
         <div class="menu">
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home Page</a>
+                    <a class="nav-link" href="index.html">Home Page</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Estatisticas</a>
@@ -47,16 +47,23 @@
                     <a class="nav-link" href="traps.html">Armadilhas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="downloads.html">Downloads</a>
+                    <a class="nav-link active" href="downloads.html">Downloads</a>
                 </li>
             </ul>
         </div>
     </div>
+    <div class="content">
+        <div class="drive">
+            <a href="https://doc-0s-6s-docs.googleusercontent.com/docs/securesc/7vkh3jka13kp24ffmdb4pe7fh9v55rar/e81o4m9ml1495btcj2cfcmj1m37jf1ud/1579291200000/09703614374138945832/09703614374138945832/1mpN2c8I9fXQuOVNjkUzIKp2mP5QIZkrc?e=download&authuser=1&nonce=9lgid2fi7rkmq&user=09703614374138945832&hash=581t649uu3jrn1uckq72mkbq50a03gcr">
+                <img src="assets/img/GoogleDrive.png"></a>
 
+            <a href="https://mega.nz/#!ANEnFK6Z">
+                <img src="assets/img/Mega.png"></a>
 
-
-    <script src="assets/js/script.js"></script>
-    <script src="assets/js/modal.js"></script>
+            <a href="http://www.mediafire.com/file/rd9oi5qqizszvj9/PDF.zip/file">
+                <img src="assets/img/Mediafire.png"></a>
+        </div>
+    </div>
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.js"></script>
