--- a/admin/downloads.html
+++ b/admin/downloads.html
@@ -55,13 +55,14 @@
     <div class="content">
         <div class="drive">
             <a href="https://doc-0s-6s-docs.googleusercontent.com/docs/securesc/7vkh3jka13kp24ffmdb4pe7fh9v55rar/e81o4m9ml1495btcj2cfcmj1m37jf1ud/1579291200000/09703614374138945832/09703614374138945832/1mpN2c8I9fXQuOVNjkUzIKp2mP5QIZkrc?e=download&authuser=1&nonce=9lgid2fi7rkmq&user=09703614374138945832&hash=581t649uu3jrn1uckq72mkbq50a03gcr">
-                <img src="assets/img/GoogleDrive.png"></a>
-
+                <img src="assets/img/GoogleDrive.png">
+            </a>
             <a href="https://mega.nz/#!ANEnFK6Z">
-                <img src="assets/img/Mega.png"></a>
-
+                <img src="assets/img/Mega.png">
+            </a>
             <a href="http://www.mediafire.com/file/rd9oi5qqizszvj9/PDF.zip/file">
-                <img src="assets/img/Mediafire.png"></a>
+                <img src="assets/img/Mediafire.png">
+            </a>
         </div>
     </div>
     <script src="assets/js/jquery.js"></script>
