--- a/luna/index.html
+++ b/luna/index.html
@@ -8,34 +8,52 @@
     <title>Intro</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/w3.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="shortcut icon" href="assets/img/ico.png" type="image/x-icon">
 </head>
 
 <body class="back">
     <!-- Head Section -->
-    <ul class="nav nav-tabs nav-justified">
-        <li class="nav-item">
-            <a class="nav-link active bg-secondary text-light" href="index.html">Intro</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link bg-secondary text-light" href="world.html">Mundo</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link bg-secondary text-light" href="history.html">História</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link bg-secondary text-light" href="character.html">Personagens</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link bg-secondary text-light" href="galery.html">Galeria</a>
-        </li>
-    </ul>
+    <nav class="menu">
+        <button type="button" class="open-menu"><i class="fas fa-bars"></i></button>
+        <div class="backdrop"></div>
+        <ul class="nav nav-tabs nav-justified">
+            <li class="nav-item">
+                <a class="nav-link active bg-secondary text-light" href="index.html">Intro</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link bg-secondary text-light" href="world.html">Mundo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link bg-secondary text-light" href="history.html">História</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link bg-secondary text-light" href="character.html">Personagens</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link bg-secondary text-light" href="galery.html">Galeria</a>
+            </li>
+        </ul>
+    </nav>
+
     <!-- Main Section -->
+    <div class="container" style="margin-top:30px">
+        <div class="row">
+            <div class="col-sm-1" style="background-color:gray;">.col-sm-8</div>
+            <div class="col" style="background-color:lavender;">.col-sm-4</div>
+            <div class="col-sm-1" style="background-color:lavenderblush;">.col-sm-8</div>
+        </div>
+    </div>
 
     <!-- Footer Section -->
-    <div class="bg-secondary footer">
-        Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-    </div>
+    <footer class="w3-container w3-center bg-secondary footer">
+        <p class="w3-hover-opacity">
+            <a class="links" href="">Design by Bruno Oliveira</a>
+        </p>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+        <p> Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+    </footer>
 
     <script src="assets/js/script.js"></script>
     <script src="assets/js/jquery.js"></script>
