--- a/admin/index.html
+++ b/admin/index.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="traps.html" target="_blank">Armadilhas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="downloads.html" target="_blank">Downloads</a>
+                    <a class="nav-link" href="xpcalculator.html" target="_blank">Calculadoras de XP</a>
                 </li>
             </ul>
         </div>
