--- a/admin/traps.html
+++ b/admin/traps.html
@@ -46,6 +46,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="traps.html">Armadilhas</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="xpcalculator.html">Calculadoras de XP</a>
+                </li>
             </ul>
         </div>
     </div>
