--- a/admin/traps.html
+++ b/admin/traps.html
@@ -53,7 +53,13 @@
         </div>
     </div>
     <!-- Main Body-->
-    <div id="tab">
+    <div>
+        <button type="button" id="btn-submit" class="btn btn-secondary">Enviar</button>
+    </div>
+    <div id="tab" style="background-color: white;">
+
+    </div>
+    <!--div id="tab">
         <div class="card" id="card" style="background-color: #cccccc;border: 5px solid rgba(0, 0, 0, 1);border-radius: 0;">
             <div class="card-title" style="font-size: 20px;">Armadilhas</div>
             <table>
@@ -144,7 +150,7 @@
                 </tbody>
             </table>
         </div>
-    </div>
+    </div-->
     <!-- Script Section-->
     <script src="assets/js/trap.js"></script>
     <script src="assets/js/jquery.js"></script>
