--- a/admin/spells.html
+++ b/admin/spells.html
@@ -49,6 +49,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="xpcalculator.html">Calculadoras de XP</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Jogadores</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="players/main.html">Inicio</a>
+                        <a class="dropdown-item" href="players/itens.html">Itens Mágicos</a>
+                        <a class="dropdown-item" href="players/sheet.html">Fichas de Personagens</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
