--- a/admin/traps.html
+++ b/admin/traps.html
@@ -49,6 +49,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="xpcalculator.html">Calculadoras de XP</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Jogadores</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="players/main.html">Inicio</a>
+                        <a class="dropdown-item" href="players/itens.html">Itens Mágicos</a>
+                        <a class="dropdown-item" href="players/sheet.html">Fichas de Personagens</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
@@ -59,7 +67,7 @@
     <div id="tab" style="background-color: white;">
 
     </div>
-    <!--div id="tab">
+    <div id="tab">
         <div class="card" id="card" style="background-color: #cccccc;border: 5px solid rgba(0, 0, 0, 1);border-radius: 0;">
             <div class="card-title" style="font-size: 20px;">Armadilhas</div>
             <table>
@@ -150,7 +158,7 @@
                 </tbody>
             </table>
         </div>
-    </div-->
+    </div>
     <!-- Script Section-->
     <script src="assets/js/trap.js"></script>
     <script src="assets/js/jquery.js"></script>
